--- a/KLS_WEB/KLS_WEB/Views/Monitoring/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Monitoring/Index.cshtml
@@ -9,35 +9,83 @@
                 <a href="#">
                     <div class="material-icons icon-red">arrow_back</div>
                 </a>
-                <div class="text-uppercase poppins medium size-24 pl-2">qweewrw</div>
+                <div class="text-uppercase poppins medium size-24 pl-2">MONITOREO</div>
+            </div>
+        </div>
+        <div class="ml-auto p-2">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card text-center" style="width: 10rem;">
+                        32
+                        <br />
+                        CONFIRMADOS
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card text-center" style="width: 10rem;">
+                        54
+                        <br />
+                        EN TRANSITO
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card text-center" style="width: 10rem;">
+                        14
+                        <br />
+                        CONCLUIDOS
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-
     <div class="p-4 shadow bg-white" style="overflow-x: auto; overflow-y: hidden;">
-        <table id="table" class="table table-striped table-bordered display table-hover table-viajes" width="100%">
-            <thead>
-                <tr>
-                    <th></th>
-                </tr>
-                    @*<tr>
-                        <th>Nombre</th>
-                        <th>Teléfonos</th>
-                        <th>Dept.</th>
-                        <th>Contactos</th>
-                        <th>Correo</th>
-                        <th>Estatus</th>
-                        <th>Almacen</th>
-                        <th>Notas</th>
-                        <th>Acciones</th>
-                    </tr>*@
-            </thead>
-            <tbody id="table-info">
-                <tr>
-                    <td>ñlkñl</td>
-                </tr>
-            </tbody>
-        </table>
+        <ul class="nav nav-pills" id="pills-tab" role="tablist">
+            <li class="nav-item">
+                <label style="font-size:12px;font-weight:bold;">Cliente</label>
+                <select class="form-control form-control-sm" id="sCliente" style=" width: 200px;">
+                    <option value="value">Selecciona una opción</option>
+                </select>
+            </li>
+            <li class="nav-item pl-4">
+                <label style="font-size: 12px; font-weight: bold">Estatus</label>
+                <select class="form-control form-control-sm" style="width: 200px;">
+                    <option value="value">Selecciona una opción</option>
+                </select>
+            </li>
+            <li class="nav-item pl-4">
+                <label style="font-size: 12px; font-weight: bold">Sub estatus</label>
+                <select class="form-control form-control-sm" style="width: 200px;">
+                    <option value="value">Selecciona una opción</option>
+                </select>
+            </li>
+            <li class="nav-item pl-4" >
+                <label style="font-size: 12px; font-weight: bold">Grupo monitor</label>
+                <select class="form-control form-control-sm" style="width: 200px;">
+                    <option value="value">Selecciona una opción</option>
+                </select>
+            </li>
+            <li class="nav-item ml-auto">
+                <a class="btn btn-sm btn-secondary float-right" href="#">
+                    <span class="material-icons">
+                        file_download
+                    </span>
+                </a>
+            </li>
+        </ul>
+        <div class="pt-2">
+            <table id="table" class="table table-striped table-bordered display table-hover table-viajes" width="100%">
+                <thead>
+                    <tr>
+                        <th colspan="6"></th>
+                    </tr>
+                </thead>
+                <tbody id="table-info">
+                    <tr>
+                        <td colspan="6">Cargando...</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 
@@ -45,8 +93,69 @@
     <script>
         var DataAirlines = [];
         $(document).ready(function () {
-
+            getMonitoring();
+            getClients();
         });
+
+        function getMonitoring(){
+            $.get("Monitoring/getMonitoring", function (res) {
+                $("#table-info").empty();
+                console.log(res);
+                $.each(res, function (item, key) {
+                    $("#table-info").append(`
+                    <tr>
+                        <td>
+                            ID VIAJE: ${key.folio}<br />
+                            CLIENTE: ${key.cliente}
+                        </td>
+                        <td>
+                            ORIGEN: ${key.origen}<br />
+                            DESTINO: ${key.destino}
+                        </td>
+                        <td>
+                            FECHA DE LLEGADA : ${key.fechallegada} <br />
+                            FECHA DE LLEGADA : ${key.fechallegada_}
+                        </td>
+                        <td>
+                            SIGUIENTE CONTACTO EN -- MIN <br />
+                            ETA:-- HRS
+                        </td>
+                        <td>
+                            <button class="btn btn-success btn-sm">
+                                En tránsito
+                            </button>
+                            <br />
+                            Demorado (2HRS)
+                        </td>
+                        <td>
+                            <a href="#">
+                                <span class="material-icons">
+                                    control_point
+                                </span>
+                            </a>
+                            <a href="#">
+                                <span class="material-icons">
+                                    assistant_photo
+                                </span>
+                            </a>
+                        </td>
+                    </tr>
+                    `);
+                });
+            }).fail(function (error) {
+                console.log("Error al tratar de obtener los registros");
+            });
+        }
+
+        function getClients() {
+            $.get("/Monitoring/getClient", function (res) {
+                $.each(res, function (item, key) {
+                    $("#sCliente").append(`
+                        <option value="${key.id}">${key.nombreComercial}</option>
+                    `);
+                });
+            });
+        }
 
     </script>
 } 
