--- a/KLS_WEB/KLS_WEB/Views/Travels/AddEdit.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/AddEdit.cshtml
@@ -93,7 +93,7 @@
                 <button class="btn btn-dark cshadow" onclick="GetSection(this, 0)"><span class="material-icons">add</span></button>
             }
         </div>
-        <div style="height: 17rem; overflow-y: scroll;">
+        <div style="height: 17rem; overflow-y: scroll; overflow-x: unset;">
             <table class="table table-striped table-bordered display table-hover text-uppercase table-facturas" width="100%">
                 <thead>
                     <tr>
@@ -150,6 +150,118 @@
         </div>
     </div>
 </div>
+
+@*<div class="tester col-12">
+        <div id="terrestrenacional" class="pl-3">
+            <form class="serviceform" onsubmit="event.preventDefault()">
+                <input type="text" value="terrestrenacional" name="service" />
+                <div class="row mt-3">
+                    <div class="col-4 d-flex flex-row">
+                        <i class="material-icons text-danger my-auto" style="cursor:pointer;" onclick="confirmDelete('terrestrenacional', 0)">delete</i>
+                        <h5 class="my-auto">Terrestre Nacional</h5>
+                    </div>
+                    <div class="col-8 d-flex justify-content-end">
+                        <div class="d-flex justify-content-between">
+
+                            <div class="form-group row mr-3 my-auto">
+                                <label class="col-5 col-form-label col-form-label-sm">COSTO $</label>
+                                <div class="col-7 my-auto">
+                                    <input type="number" class="form-control form-control-sm cost" name="cost" onkeyup="setCostos(this)" onchange="this.value = parseFloat(this.value).toFixed(2)" required>
+                                </div>
+                            </div>
+                            <div class="form-group row my-auto">
+                                <label class="col-6 col-form-label col-form-label-sm mr-0">PRECIO A CLIENTE $</label>
+                                <div class="col-6 my-auto">
+                                    <input type="number" class="form-control form-control-sm mb-0 price" name="price" onkeyup="setPrecios(this)" onchange="this.value = parseFloat(this.value).toFixed(2)" required>
+                                    <small class="text-black-50 mt-0 priceinfo"></small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row mt-3">
+                    <div class="col-6 card">
+                        <div class="form-group mt-3">
+                            <label class="col-form-label col-form-label-sm font-weight-bold">TRANSPORTISTA</label>
+                            <div>
+                                <select id="carrier-terrestrenacional" class="form-control form-control-sm" style="width: 100%;" onchange="getOperadores(this.value)">
+                                    <option value="0">selecciona</option>
+                                    <option value="3">Grupo transportes monterrey</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group mt-3">
+                            <label class="col-form-label col-form-label-sm font-weight-bold">CHOFER</label>
+                            <select class="form-control form-control-sm" id="chofer" name="driver" style="width: 100%;" onchange="getOperador(this.value)">
+                                <option value="0">DEBES SELECCIONAR UN TRANSPORTISTA</option>
+                            </select>
+                            <div class="row mt-3">
+                                <div class="col-3">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="licencia" checked disabled>
+                                        <label class="form-check-label" for="licencia">
+                                            LICENCIA
+                                        </label>
+                                    </div>
+
+                                </div>
+
+                                <div class="col-8">
+                                    <span id="nolicencia" class="size-12"></span>
+                                </div>
+
+                            </div>
+                            <div class="row">
+                                <div class="col-3">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="telefono" checked disabled>
+                                        <label class="form-check-label" for="telefono">
+                                            No. Telefono
+                                        </label>
+                                    </div>
+
+                                </div>
+
+                                <div class="col-8">
+                                    <span id="notelefono" class="size-12"></span>
+                                </div>
+
+                            </div>
+                            <div class="row">
+                                <div class="col-3">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="imss" checked disabled>
+                                        <label class="form-check-label" for="imss">
+                                            IMSS
+                                        </label>
+                                    </div>
+
+                                </div>
+
+                                <div class="col-9 d-flex justify-content-between flex-row">
+                                    <span id="noimss" class="size-12 my-2"></span>
+                                    <i class="material-icons text-danger" style="cursor:pointer; font-size:2.5rem;" onclick="downloadChofer(this)">cloud_download</i>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 bg-light-grey">
+                        <div class="col-12">
+                            <div class="row mb-0">
+                                <div class="poppins medium size-14 text-left mt-4 mb-3 col-4">TIPO DE SERVICIO</div>
+                                <div class="poppins medium size-14 text-left mt-4 mb-3 col-7 ml-2">ELEGIR EQUIPO</div>
+                            </div>
+                            <div class="equipocontainer">
+                            </div>
+                            <i id="addEquipo" class="material-icons" style="cursor:pointer;" onclick="addEquipo('terrestrenacional', this)">add_box</i>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>*@
 
 <!--Modal global-->
 <div class="modal fade" id="modalDiv" tabindex="-1" role="dialog" data-backdrop="static" data-keyboard="false"
@@ -395,10 +507,64 @@
                 return;
             }
 
+            if ($('#servicesform').serializeArray().length === 0) {
+                dToast('error', 'Los servicios son obligatorios', 'Error');
+                return;
+            }
+
+            let section = {};
+            let service = {};
+            section = { ...section, ...Object.fromEntries(new FormData(f)) };
+            service = { service, section };
+
+            $('#servicesform').serializeArray().map(({ name }) => {
+                $(`.${name}-form`).map((k, form) => {
+                    service = { ...service, ...Object.fromEntries(new FormData(form)) };
+                });
+            });
+
+            const invalidServices = Object.entries(service).some(([k, v]) => {
+                if (v === '' || v == 0) {
+                    return true;
+                }
+                return false;
+            });
+
+            if (invalidServices) {
+                dToast('error', 'Los parámetros de servicios son obligatorios', 'Error');
+                return;
+            }
+
+
+            let units = [];
+            $('.formunit').map((k, v) => {
+                units = [...units, Object.fromEntries([...new FormData(v)])];
+            });
+            service = { ...service, units };
+
+            if (service['units'].length === 0) {
+                dToast('error', 'Las unidades de servicios son obligatorias', 'Error');
+                return;
+            } else {
+                const invalidUnit = service['units'].some(({ typeid, unitid }) => {
+                    if (typeid == 0 || unitid == 0) {
+                        return true;
+                    }
+                    return false;
+                });
+                if (invalidUnit) {
+                    dToast('error', 'Las unidades de servicios son obligatorias', 'Error');
+                    return;
+                }
+            }
+            console.log('post: ', service);
             b.disabled = true;
             const params = {
                 method: 'POST',
-                body: new FormData(f)
+                headers: {
+                    'Content-type': 'application/json; charset=utf-8'
+                },
+                body: JSON.stringify(service)
             };
 
             try {
@@ -449,16 +615,16 @@
             }
         }
 
-        const getOperadores = async idtransportista => {
+        const getOperadores = async (idtransportista, service) => {
             const idselected = $('.equipocontainer').attr('rel');
             idselected != idtransportista && $('.equipocontainer select').parent().remove();
             try {
                 const response = await fetch(`/Carriers/Operators/getOperators?Id_Transportista=${idtransportista}`);
                 const data = await response.json();
-                $('#chofer').empty();
-                $('#chofer').append(`<option value="0" selected disabled>SELECCIONA UN CHOFER</option>`)
-                data.length > 0 ? data.map(({ id, nombre, estatus }) => estatus === 1 ? $('#chofer').append(`<option value="${id}">${nombre}</option>`) : null) : $('#chofer').append(`<option value="0">SIN OPERADORES ACTIVOS</option>`);
-                dSelect('chofer');
+                $(`#chofer-${service}`).empty();
+                $(`#chofer-${service}`).append(`<option value="0" selected>SELECCIONA UN CHOFER</option>`)
+                data.length > 0 ? data.map(({ id, nombre, estatus }) => estatus === 1 ? $(`#chofer-${service}`).append(`<option value="${id}">${nombre}</option>`) : null) : $(`#chofer-${service}`).append(`<option value="0">SIN OPERADORES ACTIVOS</option>`);
+                dSelect(`chofer-${service}`);
             } catch (e) {
                 console.error(e);
             }
@@ -478,20 +644,22 @@
 
         const addEquipo = (servicio, element) => {
             const boton = jQuery(element);
-            const idtransportista = $('#transportista').val();
+            const idtransportista = $(`#carrier-${servicio}`).val();
             const elementid = $('.equipocontainer').children().length;
             $('.equipocontainer').attr('rel', idtransportista);
             boton.remove();
             const equipo = `<div class="d-flex justify-content-between equipo mt-2">
-                    <select id="unidad${elementid}" class="form-control form-control-sm col-4 selectunidad" name="unidad${servicio}" required onchange="{selectEquipo(${idtransportista}, this.value, ${elementid});}">
+                <form class="formunit ${servicio} row w-100">
+                    <select id="unidad${elementid}" class="form-control form-control-sm col-4 selectunidad" name="typeid" required onchange="{selectEquipo(${idtransportista}, this.value, ${elementid});}">
                     </select>
                     <div class="col-8 d-flex flex-row justify-content-between">
-                        <select id="equipo${elementid}" class="form-control form-control-sm col-10 selectequipo" name="equipo${servicio}" required>
+                        <select id="equipo${elementid}" class="form-control form-control-sm col-10 selectequipo" name="unitid" required>
                         </select>
                         <i class="material-icons text-danger" style="cursor: pointer;" onClick="{$(this).parent().parent().remove();}">delete</i>
                     </div>
-                </div>
-                <i id="addEquipo" class="material-icons" style="cursor:pointer;" onclick="addEquipo('${servicio}', this);">add_box</i>`;
+                </form>
+            </div>
+            <i id="addEquipo" class="material-icons" style="cursor:pointer;" onclick="addEquipo('${servicio}', this);">add_box</i>`;
             $('.equipocontainer').append(equipo);
             getInventario(idtransportista, elementid);
         }
