--- a/KLS_WEB/KLS_WEB/Views/Travels/_Section.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/_Section.cshtml
@@ -10,6 +10,7 @@
 
     }
     <div>
+        @*<button class="btn btn-dark" onclick="AddEditSection(this, document.getElementsByClassName('serviceform'), document.getElementsByClassName('carrierparams'))">GUARDAR</button>*@
         <button class="btn btn-dark" onclick="AddEditSection(this, document.querySelector('#sectionform'))">GUARDAR</button>
     </div>
 </div>
