*Travels AddEdit without empty sections

--- a/KLS_WEB/KLS_WEB/Views/Travels/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/Index.cshtml
@@ -5,7 +5,6 @@
     <div class="p-4">
         <div class="text-left mb-3">
             <div class="text-uppercase poppins medium size-24 pl-2">Viajes</div>
-            <a asp-action="AddEdit" asp-route-id="0" class="btn btn-sm btn-outline-secondary float-right"><span class="material-icons">add</span></a>
         </div>
 
         <div class="p-4 shadow bg-white">
@@ -32,7 +31,7 @@
 @section Scripts{
     <script>
         $(document).ready(function (event) {
-            //DT();
+            DT();
         });
 
         DT = () => {
@@ -44,20 +43,20 @@
                 serverSide: true,
                 ajax: {
                     type: 'POST',
-                    url: '/Travels/getTravels'
+                    url: '/Travels/DataTableTravels'
                 },
                 columns: [
                     { data: 'folio' },
                     { data: 'cliente' },
                     { data: 'origen' },
                     { data: 'destino' },
-                    { data: 'salida' },
-                    { data: 'llegada' },
+                    { data: 'fechaSalida' },
+                    { data: 'fechaLlegada' },
                     { data: 'estatus' },
                     {
                         data: 'mainTravelId',
                         render: (mainTravelId, type, full, meta) => `
-                            <a href="/Travels/AddEditMainTravel/${mainTravelId}">
+                            <a href="/Travels/AddEdit/${mainTravelId}">
                                 <span class="material-icons">
                                     open_in_new
                                 </span>
@@ -65,27 +64,10 @@
                     }
                 ],
                 language: {
-                    "decimal": "",
-                    "emptyTable": "No hay información",
-                    "info": "Mostrando _START_ a _END_ de _TOTAL_ Entradas",
-                    "infoEmpty": "Mostrando 0 to 0 of 0 Entradas",
-                    "infoFiltered": "(Filtrado de _MAX_ total entradas)",
-                    "infoPostFix": "",
-                    "thousands": ",",
-                    "lengthMenu": "Mostrar _MENU_ Entradas",
-                    "loadingRecords": "Cargando...",
-                    "processing": "Procesando...",
-                    "search": "Buscar",
-                    "zeroRecords": "Sin resultados encontrados",
-                    "paginate": {
-                        "first": "Primero",
-                        "last": "Ultimo",
-                        "next": "Siguiente",
-                        "previous": "Anterior"
-                    }
+                    url: '/json/dt-es.json'
                 },
                 initComplete: () => {
-                    $('#table_length').html(`<a href="/Travels/AddEditMainTravel/0" class="btn btn-sm btn-outline-secondary float-right"><span class="material-icons">add</span></a>`).show();
+                    $('#table_length').html(`<a href="/Travels/AddEdit/0" class="btn btn-sm btn-outline-secondary float-right"><span class="material-icons">add</span></a>`).show();
                 }
             });
         }
