--- a/KLS_WEB/KLS_WEB/Views/Travels/_Service.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/_Service.cshtml
@@ -10,6 +10,7 @@
             case "terrestrenacional":
                 <div id="@service-container" class="pl-3 service">
                     <form class="serviceform @service-form" onsubmit="event.preventDefault()">
+                        <input type="hidden" id="@service-serviceid" name="ServiceId" value="-1" />
                         <input type="text" value="@service" name="service" hidden/>
                         <div class="row mt-3">
                             <div class="col-4 d-flex flex-row">
@@ -96,7 +97,7 @@
 
                                         <div class="col-9 d-flex justify-content-between flex-row">
                                             <span id="noimss" class="size-12 my-2"></span>
-                                            <i class="material-icons text-danger" style="cursor:pointer; font-size:2.5rem;" onclick="downloadChofer(this)">cloud_download</i>
+                                            <i class="material-icons text-danger" style="cursor:pointer; font-size:2.5rem;" onclick="downloadChofer(this, `chofer-@service`)">cloud_download</i>
                                         </div>
 
                                     </div>
